2007-07-13 Ian Rutt
 * Replaced tridiagonal solver (glimmer_utils.F90) to avoid using NR code.

2007-07-12 Ian Rutt
 * More reformatting in glide_thck.F90
 * Removed redundant call to ds2y from slapsolv - this is called
   automatically within dslucs.
 * Fixed intermittent bug with non-linear solver - non-reinitialisation of
   matrix storage
 * Reformated slapsolv and improved error handling
 * Various other bits of tidying up and rationalisation

2007-07-11 Ian Rutt
 * Improved code formatting in glide_thck.F90
	
2007-06-29 Ian Rutt
 * Fixed bug in rain/snow partition in daily PDD scheme that occasionally generated
   NaN values.

2007-06-28 Ian Rutt
 * Minor bugfix to glint.F90 - problem with message lengths. Spotted by Rupert

2007-05-29 Ian Rutt
 * configure.in: bump version to 1.0.5

2007-05-29 Ian Rutt
 * configure.in: bump version to 1.0.4
 * NEWS: update

2007-05-29 Ian Rutt
 * Added code to enable the setting of a default path for glint and glide. This
   code is in glimmer_filenames.F90, and can be accessed with the glimmer_set_path
   subroutine.
	
2007-05-28 Ian Rutt
 * Added use glimmer_config to glide so that configs can be dealt with 
   with only one use statement
 * Fixed problem with ^ in generating LaTeX from .def files
 * Fixed bugs with south pole usage of stereographic projection
	
2007-05-04 Ian Rutt
 * Fixed bug in GLINT output: After rejigging GLINT timestepping, output was only 
   possible at GLIDE time-steps, due to separation of time variables between the two. 
   Overcame this by building extra code to handle instantaneous glint variables; this
   can be accessed using [GLINT output] section in config file.
 * Added functionality to turn off writing glide output using optional argument (this
   facilitates GLINT output timing)

2007-05-01 Ian Rutt
 * Discovered that there was inadequate precision in the single-precision
   version of glimmer for the calculation of fractional locations in the